5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4358/executions/1613_2425.log
== TEST (2019-05-01 17:52:27) 
-- CODE:
dist=float(input("Digite a distancia percorrida(km):"))
comb_gast=float(input("Digite o total de combustivel gasto:"))
cons_medio=dist/comb_gast,km/l
print(round(cons_medio,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cons_medio=dist/comb_gast,km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:53:00) 
-- CODE:
dist=float(input("Digite a distancia percorrida(km):"))
comb_gast=float(input("Digite o total de combustivel gasto:"))
cons_medio=(dist/comb_gast)km/l
print(round(cons_medio,3))
-- ERROR:
File "XXXX", line 3
    cons_medio=(dist/comb_gast)km/l
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:53:12) 
-- CODE:
dist=float(input("Digite a distancia percorrida(km):"))
comb_gast=float(input("Digite o total de combustivel gasto:"))
cons_medio=(dist/comb_gast),km/l
print(round(cons_medio,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cons_medio=(dist/comb_gast),km/l
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:53:40) 
-- CODE:
dist=float(input("Digite a distancia percorrida(km):"))
comb_gast=float(input("Digite o total de combustivel gasto:"))
cons_medio=(dist/comb_gast),"km/l"
print(round(cons_medio,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cons_medio,3))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:53:49) 
-- CODE:
dist=float(input("Digite a distancia percorrida(km):"))
comb_gast=float(input("Digite o total de combustivel gasto:"))
cons_medio=(dist/comb_gast),"km/l"
print(round(cons_medio,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cons_medio,3))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:55:11) 
-- CODE:
dist=float(input("Digite a distancia percorrida(km):"))
comb_gast=float(input("Digite o total de combustivel gasto:"))
cons_medio=(dist/comb_gast)
print(round(cons_medio "km/l",3))
-- ERROR:
File "XXXX", line 4
    print(round(cons_medio "km/l",3))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:55:20) 
-- CODE:
dist=float(input("Digite a distancia percorrida(km):"))
comb_gast=float(input("Digite o total de combustivel gasto:"))
cons_medio=(dist/comb_gast)
print(round(cons_medio, "km/l",3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cons_medio, "km/l",3))
TypeError: round() takes at most 2 arguments (3 given)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 17:56:02) 
-- CODE:
dist=float(input("Digite a distancia percorrida(km):"))
comb_gast=float(input("Digite o total de combustivel gasto:"))
cons_medio=(dist/comb_gast)+"km/l"
print(round(cons_medi,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    cons_medio=(dist/comb_gast)+"km/l"
TypeError: unsupported operand type(s) for +: 'float' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:02:39) 
-- CODE:
dist=float(input("Digite a distancia percorrida(km):"))
comb_gast=float(input("Digite o total de combustivel gasto:"))
cons_medio=(dist/comb_gast)
print(round(cons_medi,3),"km/l")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(cons_medi,3),"km/l")
NameError: name 'cons_medi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-01 18:03:11) 
-- CODE:
dist=float(input("Digite a distancia percorrida(km):"))
comb_gast=float(input("Digite o total de combustivel gasto:"))
cons_medio=(dist/comb_gast)
print(round(cons_medio,3),"km/l")
-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-01 18:03:39) 
-- CODE:
dist=float(input("Digite a distancia percorrida(km):"))
comb_gast=float(input("Digite o total de combustivel gasto:"))
cons_medio=(dist/comb_gast)
print(round(cons_medio,3),"km/l")
-- EXECUTION TIME:
0.221349
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
